--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
         #pop {
             font-size: 33em;
+            line-height: 33em;
             color: white;
-            font-family: "Helvetica Neue", sans-serif;
+            font-family: "Impact", sans-serif;
+            text-transform: uppercase;
         }
 
         .poep {
@@ -39,12 +41,14 @@
         @media only screen and (max-width: 1200px) {
             #pop {
                 font-size: 12em;
+                line-height: 12em;
             }
         }
 
         @media only screen and (max-width: 720px) {
             #pop {
                 font-size: 8em;
+                line-height: 8em;
             }
         }
     </style>
